--- a/ecommerce-front/src/styles.css
+++ b/ecommerce-front/src/styles.css
@@ -7,6 +7,8 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+
+    font-family: 'Bahnschrift SemiBold';
   }
   body::-webkit-scrollbar {
     display: none;
